--- a/8.2/apache/Dockerfile
+++ b/8.2/apache/Dockerfile
@@ -33,6 +33,7 @@ RUN { \
 		echo 'opcache.enable_cli=1'; \
 	} > /usr/local/etc/php/conf.d/opcache-recommended.ini
 
+VOLUME /var/www/html
 WORKDIR /var/www/html
 
 # https://www.drupal.org/node/3060/release
